refactor: 统一Agent工具调用链路并补齐方法注释